finished business logic

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,8 +30,8 @@
 
     <div class="form-group">
         <label for="slee">Hungry?</label><br>
-        <input type="radio" name="sleepy" value="1" checked> Eaten!<br>
-        <input type="radio" name="sleepy" value="0"> Ready to Eat
+        <input type="radio" name="devoured" value="1" checked> Eaten!<br>
+        <input type="radio" name="devoured" value="0"> Ready to Eat
     </div>
 
     <button type="submit">Add a burger!</button>
