--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,12 +3,15 @@ li {
   margin: 5px;
   background: #faebd7;
 }
-
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
 .label {
   font-weight: bold;
 }
 
-.create-update-form {
+.create-form {
   padding: 5px;
   margin: 5px;
   background: rgb(255, 157, 0);
