--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,7 @@
 <h1>Eat Dat Burger!</h1>
 
+<img src='../public/assets/turkey.jpeg' alt='turkey burger'></img>
+
 <h2>It's okay we have burger options for everyone</h2>
 
 <ul>
@@ -25,7 +27,7 @@
 
     <div class="form-group">
         <label for="ca">Burger Name:</label>
-        <input type="text" id="ca" name="name">
+        <input type="text" id="ca" name="burgerName">
     </div>
 
     <div class="form-group">
