changed link for turkey burger and added node_modules to gitgnore
adjusted /public/assets/turkey.jpg ---- to ---- ./assets/turkey.jpg

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <h1>Eat Dat Burger!</h1>
 
-<img src='../public/assets/turkey.jpeg' alt='turkey burger'></img>
+<img src='../assets/turkey.jpeg' alt='turkey burger'></img>
 
 <h2>It's okay we have burger options for everyone</h2>
 
